name:          hurtle
version:       0.1.0.0
synopsis:      A control structure for highly concurrent blocking requests.
-- description:
license:       Apache-2.0
license-file:  LICENSE
author:        Ben Sinclair
maintainer:    Ben Sinclair <ben.d.sinclair@gmail.com>
copyright:     Ben Sinclair (c) 2014
-- category:
build-type:    Simple
-- extra-source-files:
cabal-version: >=1.10

library
  exposed-modules:
      System.Hurtle
  -- other-extensions:
  build-depends:
      base >=4.6 && <4.8
    , async
    , containers
    , free
    , hashable
    , lens
    , mmorph
    , stm
    , transformers
    , unordered-containers
  ghc-options:      -Wall
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite hurtle-test
  type:        exitcode-stdio-1.0
  main-is:     Main.hs
  -- other-extensions:
  build-depends:
      base >=4.6 && <4.8
    , hslogger
    , hurtle
    , stm
    , unordered-containers
  ghc-options:      -Wall
  hs-source-dirs:   test-src
  default-language: Haskell2010
